tests/out/error/redef/type.in.bt
type All := i32
type All := fun() bool
