tests/out/error/redef/type.out
error: redfinition of "All"
tests/out/error/redef/type.in.bt:1:0 conflict: type
tests/out/error/redef/type.in.bt:2:0 conflict: type
